--- a/app/pom.xml
+++ b/app/pom.xml
@@ -78,9 +78,13 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.3</version>
+                <version>0.0.6</version>
                 <configuration>
                     <mainClass>pl.marcinchwedczuk.rfid.gui.App</mainClass>
+                    <options>
+                        <!-- Workaround for BUG: https://stackoverflow.com/a/65062759/1779504 -->
+                        <option>-Dsun.security.smartcardio.library=/System/Library/Frameworks/PCSC.framework/PCSC</option>
+                    </options>
                 </configuration>
             </plugin>
             <plugin>
