--- a/app/pom.xml
+++ b/app/pom.xml
@@ -82,8 +82,10 @@
                 <configuration>
                     <mainClass>pl.marcinchwedczuk.rfid.gui.App</mainClass>
                     <options>
-                        <!-- Workaround for BUG: https://stackoverflow.com/a/65062759/1779504 -->
+                        <!-- Workaround for BUG (macOS only): https://stackoverflow.com/a/65062759/1779504 -->
+                        <!--
                         <option>-Dsun.security.smartcardio.library=/System/Library/Frameworks/PCSC.framework/PCSC</option>
+                        -->
                     </options>
                 </configuration>
             </plugin>
