--- a/app/card-acr122/pom.xml
+++ b/app/card-acr122/pom.xml
@@ -22,12 +22,15 @@
             <groupId>pl.marcinchwedczuk</groupId>
             <artifactId>card-api</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
+            <groupId>pl.marcinchwedczuk</groupId>
+            <artifactId>card-commons</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
