--- a/app/pom.xml
+++ b/app/pom.xml
@@ -7,10 +7,11 @@
     <version>1.0.0</version>
 
     <modules>
-        <module>gui</module>
+        <module>card-api</module>
         <module>card-acr122</module>
         <module>card-fake</module>
-        <module>card-api</module>
+        <module>card-commons</module>
+        <module>gui</module>
     </modules>
 
     <properties>
@@ -42,6 +43,11 @@
             </dependency>
             <dependency>
                 <groupId>pl.marcinchwedczuk</groupId>
+                <artifactId>card-commons</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>pl.marcinchwedczuk</groupId>
                 <artifactId>gui</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -57,14 +63,21 @@
                 <version>${javafx.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.30</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-api</artifactId>
-                <version>2.14.1</version>
+                <artifactId>log4j-slf4j-impl</artifactId>
+                <version>2.9.0</version>
+                <scope>runtime</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
                 <version>2.14.1</version>
+                <scope>runtime</scope>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
