--- a/app/gui/pom.xml
+++ b/app/gui/pom.xml
@@ -15,6 +15,12 @@
         <extra-jvm-options-when-running-tests>
             --add-opens pl.marcinchwedczuk.rfid/pl.marcinchwedczuk.rfid.xml=ALL-UNNAMED
         </extra-jvm-options-when-running-tests>
+
+
+        <dependency.org.apache.logging.log4j.log4j-api>2.13.3</dependency.org.apache.logging.log4j.log4j-api>
+        <dependency.org.apache.logging.log4j.log4j-slf4j-impl>2.13.3</dependency.org.apache.logging.log4j.log4j-slf4j-impl>
+        <dependency.org.apache.logging.log4j.log4j-core>2.13.3</dependency.org.apache.logging.log4j.log4j-core>
+        <dependency.org.slf4j.slf4j-api>1.7.30</dependency.org.slf4j.slf4j-api>
     </properties>
 
     <dependencies>
@@ -39,6 +45,22 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+            <version>${dependency.org.slf4j.slf4j-api}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${dependency.org.apache.logging.log4j.log4j-api}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${dependency.org.apache.logging.log4j.log4j-core}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${dependency.org.apache.logging.log4j.log4j-slf4j-impl}</version>
         </dependency>
 
         <dependency>
@@ -74,7 +96,7 @@
                         <!-- Workaround for BUG (macOS only): https://stackoverflow.com/a/65062759/1779504 -->
 
                         <option>-Dsun.security.smartcardio.library=/System/Library/Frameworks/PCSC.framework/PCSC</option>
-
+                        <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=1044</option>
                     </options>
                 </configuration>
             </plugin>
