--- a/app/card-acr122/pom.xml
+++ b/app/card-acr122/pom.xml
@@ -28,8 +28,20 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
+            <!-- Enable logging in tests to stdout -->
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
