--- a/app/pom.xml
+++ b/app/pom.xml
@@ -201,6 +201,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <trimStackTrace>false</trimStackTrace>
                     <argLine>
                         ${extra-jvm-options-when-running-tests}
                     </argLine>
