--- a/app/pom.xml
+++ b/app/pom.xml
@@ -30,12 +30,17 @@
         <testfx.version>4.0.16-alpha</testfx.version>
         <openjfx-monocle.version>jdk-11+26</openjfx-monocle.version>
 
+        <maven-jacoco.plugin.version>0.8.7</maven-jacoco.plugin.version>
+
         <!-- Placeholders to be customized by child projects or profiles -->
         <extra-jvm-options-when-running-tests></extra-jvm-options-when-running-tests>
         <extra-jvm-options-when-running-gui-app></extra-jvm-options-when-running-gui-app>
 
         <!-- tests -->
         <skip.it.tests>true</skip.it.tests>
+
+        <!-- dummy value for jacoco plugin to set -->
+        <jacocoAgent></jacocoAgent>
     </properties>
 
     <dependencyManagement>
@@ -173,6 +178,14 @@
                     <artifactId>javafx-maven-plugin</artifactId>
                     <version>0.0.6</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${maven-jacoco.plugin.version}</version>
+                    <configuration>
+                        <propertyName>jacocoAgent</propertyName>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
 
@@ -203,7 +216,7 @@
                 <configuration>
                     <trimStackTrace>false</trimStackTrace>
                     <argLine>
-                        ${extra-jvm-options-when-running-tests}
+                        @{jacocoAgent} ${extra-jvm-options-when-running-tests}
                     </argLine>
                     <systemPropertyVariables>
                         <org.slf4j.simpleLogger.defaultLogLevel>DEBUG</org.slf4j.simpleLogger.defaultLogLevel>
@@ -242,6 +255,32 @@
             <properties>
                 <skip.it.tests>false</skip.it.tests>
             </properties>
+        </profile>
+
+        <profile>
+            <id>cover</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>report</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 </project>
