--- a/app/pom.xml
+++ b/app/pom.xml
@@ -25,12 +25,14 @@
         <jackson.version>2.11.1</jackson.version>
         <woodstox.version>5.1.0</woodstox.version>
 
-        <junit.version>5.4.0</junit.version>
+        <junit.version>5.7.0</junit.version>
         <assertj.version>3.19.0</assertj.version>
         <testfx.version>4.0.16-alpha</testfx.version>
         <openjfx-monocle.version>jdk-11+26</openjfx-monocle.version>
 
         <maven-jacoco.plugin.version>0.8.7</maven-jacoco.plugin.version>
+        <maven-pitest.plugin.version>1.6.6</maven-pitest.plugin.version>
+        <maven-pitest-junit.plugin.version>0.14</maven-pitest-junit.plugin.version>
 
         <!-- Placeholders to be customized by child projects or profiles -->
         <extra-jvm-options-when-running-tests></extra-jvm-options-when-running-tests>
@@ -186,6 +188,11 @@
                         <propertyName>jacocoAgent</propertyName>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.pitest</groupId>
+                    <artifactId>pitest-maven</artifactId>
+                    <version>${maven-pitest.plugin.version}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
@@ -278,6 +285,53 @@
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>pitest</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter-engine</artifactId>
+                    <version>${junit.version}</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.pitest</groupId>
+                        <artifactId>pitest-maven</artifactId>
+                        <configuration>
+                            <targetClasses>
+                                <param>pl.marcinchwedczuk.rfid*</param>
+                            </targetClasses>
+                            <targetTests>
+                                <param>pl.marcinchwedczuk.rfid*Test</param>
+                            </targetTests>
+                            <avoidCallsTo>
+                                <avoidCallsTo>org.slf4j</avoidCallsTo>
+                            </avoidCallsTo>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>run-pitest</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>mutationCoverage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.pitest</groupId>
+                                <artifactId>pitest-junit5-plugin</artifactId>
+                                <version>${maven-pitest-junit.plugin.version}</version>
+                            </dependency>
+                        </dependencies>
                     </plugin>
                 </plugins>
             </build>
