--- a/app/pom.xml
+++ b/app/pom.xml
@@ -46,6 +46,20 @@
         <jacocoAgent></jacocoAgent>
     </properties>
 
+    <repositories>
+        <!-- Allow snapshots (for my javafx.validation library) -->
+        <repository>
+            <id>oss.sonatype.org-snapshot</id>
+            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
